refactor(api)!: standardize response and error handling
- adopt ProblemDetail for consistent API errors
- consolidate failures with ApplicationException and ErrorCode
- remove legacy response and exception wrappers
- return resources directly and nest pagination details under meta
- align OpenAPI documentation and tests